--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/weishaodaren/polaris-react-formula.git"
   },
-  "version": "7.3.5",
+  "version": "7.3.6-beta.3",
   "type": "module",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -47,17 +47,17 @@
     "*.[jt]s?(x)": "pnpm lint"
   },
   "peerDependencies": {
-    "dayjs": "^1.8.16",
+    "dayjs": "^1.11.10",
     "lodash": "^4.17.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@formulajs/formulajs": "^3.1.7",
-    "antd": "^4.23.6",
+    "antd": "^5.16.4",
     "codemirror": "5.65.8",
     "polaris-icon": "^8.5.0",
-    "polaris-react-component": "^0.18.1",
+    "polaris-react-component": "0.18.2-beta.3",
     "react-codemirror2": "^7.2.1"
   },
   "devDependencies": {
@@ -69,7 +69,7 @@
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "@vitejs/plugin-react": "^2.2.0",
-    "dayjs": "^1.8.16",
+    "dayjs": "^1.11.10",
     "eslint": "^8.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
